--- a/Tools/Icon/Rakefile
+++ b/Tools/Icon/Rakefile
@@ -2,6 +2,10 @@ file "icons/Icon-40@2x.png" => ["icon.png"] do |t|
   sh "ruby s9icongen.rb #{t.source}"
 end
 
-task :all => ["icons/Icon-40@2x.png"]
+file "screens/Default@2x~iphone.png" => ["splash.png"] do |t| 
+  sh "ruby s9splashgen.rb #{t.source}"
+end
+
+task :all => ["icons/Icon-40@2x.png", "screens/Default@2x~iphone.png"]
 task :default => :all
 
