Add rubypico to URL Schemes

--- a/App/Info.plist
+++ b/App/Info.plist
@@ -26,6 +26,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>pictruby</string>
+				<string>rubypico</string>
 			</array>
 		</dict>
 	</array>
